# snapclient

./: .cproject  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig_NO_SPI_RAM  sdkconfig_PSRAM_lyrat_v4.3  sdkconfig_SPI_RAM  sdkconfig_TAS5805M  sdkconfig_for_esp_snapserver  sdkconfig_lyrat_v4.3
components/audio_board/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/audio_hal/: CMakeLists.txt  audio_hal.c  audio_volume.c
components/audio_sal/: audio_mem.c  audio_mutex.c  audio_queue.c  audio_sys.c  audio_thread.c  audio_url.c  media_os_ctype.c
components/custom_board/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/custom_driver/: CMakeLists.txt  i2s.c
components/dsp_processor/: Kconfig.projbuild  dsp_processor.c
components/esp_peripherals/: CMakeLists.txt  esp_peripherals.c  periph_adc_button.c  periph_aw2013.c  periph_button.c  periph_console.c  periph_gpio_isr.c  periph_is31fl3216.c  periph_lcd.c  periph_led.c  periph_touch.c  (+4 more)
components/improv_wifi/: CMakeLists.txt  improvWifi.cpp  improv_wrapper.cpp  wifi_provisioning.c
components/improv_wifi/include/: wifi_provisioning.h
components/improv_wifi/priv_include/: improvWifi.h  improv_wrapper.h
components/ui_http_server/: CMakeLists.txt  Kconfig.projbuild  ui_http_server.c
components/ui_http_server/html/: index.html
components/ui_http_server/include/: ui_http_server.h
doc/: docker_build.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
snapcast/: snapserver.conf
(+201 files in other folders)
